--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -102,39 +102,23 @@
  <div class="wb-tabs">
                <div class="tabpanels">
     <details id="tab1">
-        <summary>Employee/Employer</summary>
+        <summary>Employee/Employer<br class="visible-lg"></summary>
 
+<p>Understand the tax obligations depending on one of the following situation:</p>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"> <details><summary><strong>Employees</strong></summary>
 <h3>Income tax obligations</h3>
-<p>Add info </p>
+</details></li>	
 
-<h3>Payroll obligations</h3>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4>Employee</h4>
-<ul>
-<li>Add info  </li>
-<li>Add info </li>
-</ul>
-<p>Learn more: add link</p>
-</li>
-<li class="cnjnctn-col"><h4>Payment made to an employee</h4>
-<ul>
-<li>Add info  </li>
-<li>Add info </li>
-</ul>
+<li class="cnjnctn-col"><details><summary><strong>Employer</strong></summary>
+
 <h5>Remitting deductions on the payment</h5>
 <p>Generally, you must remit the following deductions on the self-employment income paid to a self-employed fisher, a barber, a hairdresser or a driver :</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> EI <small>- Remit on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
 </ul>
-
-<p>Learn more: add link</p>
-</li>
-</ul>
-
-<h3>GST/HST obligations</h3>
-<p>Add info </p>
-
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/checklist-small-businesses.html">Checklist for businesses</a> </p>
+</details></li>	
+</ul>	
 
 </details>
 
