--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -145,7 +145,7 @@
 <p>Generally, the PSB worker calculates their contributions and reports the following amounts when they fill out their <strong>T2 corporation income tax return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB worker participates in the special EI program</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employerr and employee portion</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
 <li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the PSB worker works in the  <strong>Province of Quebec</strong></small></li>
 </ul>
 
