--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -176,18 +176,19 @@
 
 <li class="cnjnctn-col"><details><summary>Payments made to PSBs <strong>(payer)</strong></summary>
 
-<h3>Withholding and remitting deductions</h3>
-<p>Generally, the payer <strong>does not</strong> withhold and remit the following deductions on the payment made to the worker who is a PSB:</p>
+<h3>Withholding and remitting</h3>
+<p>Generally, the payer <strong>does not</strong> withhold and remit the following on the payment made to the worker who is a PSB:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Income tax <small>- <strong>Only</strong> withhold and remit on the payment for services at the rate of 15% if the PSB is a non-resident recipient</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold and remit</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong>withhold and remit</small></li> 
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong>withhold or remit</small></li> 
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> GST/HST <small>- <strong>Only</strong> withhold and remit on the payment for services where applicable if the PSB is for a construction subcontractor payment </small></li>
 </ul>
 
 <h3>Reporting the payment on the PSB's slip</h3>
 <p>Generally, the payer must report the payment made to the worker who is a PSB on the following slip:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T4A slip, T4A-NR, T5018 or T1204 slip <small>- Depending on who the payment is made to</small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> T4A, T4A-NR, T5018 or T1204 slip <small>- Depending on who the payment is made to</small></li>	
 </ul>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
 
@@ -250,7 +251,7 @@
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong>withhold or remit</small></li> 
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold or remit</small></li> 
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
