--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -102,7 +102,7 @@
  <div class="wb-tabs">
                <div class="tabpanels">
     <details id="tab1">
-        <summary>Employee/Employer<br class="visible-lg"></summary>
+        <summary><br class="visible-lg">Employee/Employer</summary>
 
 <p>Understand the tax obligations depending on one of the following situation:</p>
 <ul class="list-unstyled cnjnctn-type-or">
