--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
@@ -83,16 +83,16 @@
             
 <div class="col-md-8">
   <h2>Service summary</h2>
-  <p>The Canada Revenue Agency offers information webinars on a  variety of topics to help businesses gain a deeper understanding of the  Scientific Research and Experimental Development (SR&amp;ED) program. </p>
+  <p>The CRA offers webinars on a variety of topics to help businesses gain a deeper understanding of the Scientific Research and Experimental Development (SR&amp;ED) program. </p>
 
-<ul class="fa-ul">   
+<!--<ul class="fa-ul">   
   <li><span class="fas fa-inbox fa-lg text-muted fa-li"></span> Sign up for the <a href="https://www.canada.ca/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a> to be notified of upcoming webinars and program updates.</li>
-</ul>    	
+</ul>-->    	
 
   <h2>Upcoming  webinars</h2>
 
   <h3>Public webinars on SR&amp;ED eligibility</h3>
-  <p>This information webinar provides a summary of the  eligibility requirements of the SR&amp;ED program. It is intended for  technical, financial or accounting staff. Attendees will be taken through the  eligibility criteria, qualifying expenditures, and the free services offered. </p>
+  <p>This webinar provides a summary of the  eligibility requirements of the SR&amp;ED program. It is intended for  technical, financial or accounting staff. Attendees will be taken through the  eligibility criteria, qualifying expenditures, and the free services offered. </p>
 
 <style>
 	.dl-rdcspc dt {
@@ -109,12 +109,12 @@
 <dt>Fee:</dt>	
 <dd>Free</dd>
 <dt>Registration:</dt>	
-<dd>Register through <a href="person-information-seminars/western-quebec-tax-services-office-information-seminars.html">SR&amp;ED webinars for Quebec</a><br>
-<span class="small">Registration is required</span></dd>	
+<dd>Register through <a href="person-information-seminars/western-quebec-tax-services-office-information-seminars.html">SR&amp;ED webinars for Quebec</a><!--<br>
+<span class="small">Registration is required</span>--></dd>	
 </dl>	
 
   <h3>Public webinars on SR&amp;ED financial issues</h3>
-  <p>This information webinar provides a summary of the financial  aspects of the SR&amp;ED program. It is intended for financial or accounting  staff already familiar with the basics of the SR&amp;ED program. Attendees will  be taken through the completion of a T661 Form and the calculation of investment tax credits. </p>
+  <p>This webinar provides a summary of the financial  aspects of the SR&amp;ED program. It is intended for financial or accounting  staff already familiar with the basics of the SR&amp;ED program. Attendees will  be taken through the completion of a T661 Form and the calculation of investment tax credits. </p>
 
 <dl class="dl-horizontal dl-rdcspc brdr-0">
 <dt>Date:</dt>	
@@ -124,15 +124,17 @@
 <dt>Fee:</dt>	
 <dd>Free</dd>
 <dt>Registration:</dt>	
-<dd>Register through <a href="person-information-seminars/greater-toronto-west-tax-services-office-information-seminars.html">SR&amp;ED webinars for Ontario</a><br>
-<span class="small">Registration is required</span></dd>	
+<dd>Register through <a href="person-information-seminars/greater-toronto-west-tax-services-office-information-seminars.html">SR&amp;ED webinars for Ontario</a><!--<br>
+<span class="small">Registration is required</span>--></dd>	
 </dl>		
 
 </div>
 
 </div>
 <!--preview link-->
-		 <p>To receive updates about future SR&amp;ED webinars, subscribe to our <a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">email list</a>.</p>	
+		 <h3>Get webinar updates</h3>
+		 <p>Future SR&amp;ED webinars will be listed as they become available. To receive updates about upcoming webinars and program updates, subscribe to our email list.</p>
+		 <p><a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a></p>	
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
