--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars.html
@@ -91,7 +91,7 @@
 
   <h2>Upcoming  webinars</h2>
 
-  <h3>Public webinars on SR&amp;ED eligibility</h3>
+  <h3>SR&amp;ED eligibility webinar</h3>
   <p>This webinar provides a summary of the  eligibility requirements of the SR&amp;ED program. It is intended for  technical, financial or accounting staff. Attendees will be taken through the  eligibility criteria, qualifying expenditures, and the free services offered. </p>
 
 <style>
@@ -109,11 +109,10 @@
 <dt>Fee:</dt>	
 <dd>Free</dd>
 <dt>Registration:</dt>	
-<dd>Register through <a href="person-information-seminars/western-quebec-tax-services-office-information-seminars.html">SR&amp;ED webinars for Quebec</a><!--<br>
-<span class="small">Registration is required</span>--></dd>	
+<dd>Register through <a href="person-information-seminars/western-quebec-tax-services-office-information-seminars.html">SR&amp;ED webinars for Quebec</a></dd>	
 </dl>	
 
-  <h3>Public webinars on SR&amp;ED financial issues</h3>
+  <h3>SR&amp;ED financial issues webinar</h3>
   <p>This webinar provides a summary of the financial  aspects of the SR&amp;ED program. It is intended for financial or accounting  staff already familiar with the basics of the SR&amp;ED program. Attendees will  be taken through the completion of a T661 Form and the calculation of investment tax credits. </p>
 
 <dl class="dl-horizontal dl-rdcspc brdr-0">
@@ -124,17 +123,16 @@
 <dt>Fee:</dt>	
 <dd>Free</dd>
 <dt>Registration:</dt>	
-<dd>Register through <a href="person-information-seminars/greater-toronto-west-tax-services-office-information-seminars.html">SR&amp;ED webinars for Ontario</a><!--<br>
-<span class="small">Registration is required</span>--></dd>	
+<dd>Register through <a href="person-information-seminars/greater-toronto-west-tax-services-office-information-seminars.html">SR&amp;ED webinars for Ontario</a></dd>	
 </dl>		
 
 </div>
 
 </div>
-<!--preview link-->
-		 <h3>Get webinar updates</h3>
-		 <p>Future SR&amp;ED webinars will be listed as they become available. To receive updates about upcoming webinars and program updates, subscribe to our email list.</p>
-		 <p><a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a></p>	
+
+<h3>Get webinar updates</h3>
+	<p>Future SR&amp;ED webinars will be listed as they become available. To receive updates about upcoming webinars and program updates, subscribe to our email list.</p>
+	<p><a href="https://canada-preview.adobecqms.net/en/revenue-agency/news/e-services/canada-revenue-electronic-mailing-lists/electronic-mailing-list-tax-incentives.html">SR&amp;ED electronic mailing list</a></p>	
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
