--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -106,7 +106,7 @@
 
 <p>Understand the tax obligations depending on one of the following situation:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary><strong>Employees</strong></summary>
+<li class="cnjnctn-col"> <details><summary><strong>Employee</strong></summary>
 <h3>Income tax obligations</h3>
 </details></li>	
 
@@ -129,19 +129,22 @@
 
 <p>Understand the tax obligations depending on one of the following situation:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary>PSB <strong>workers</strong></summary>
+<li class="cnjnctn-col"> <details><summary>PSB <strong>worker</strong></summary>
 <h3>Income tax obligations</h3>
 
 <p>Generally, the PSB must:</p>
 <ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> File a <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 corporation income tax return</a> <small>- <strong>Not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a></small></li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">File T2  returns</a> <small>- <strong>Not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a></small></li>
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> <small> - Same as regular corporations</small> </li>
-<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of the PSB's corporation <small>- Same as regular corporations</small> </li>
 </ul>
-
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations.html">Corporations</a></p>
 
-<h3>CPP/QPP, EI and QPIP obligations</h3>
+<h3>Payroll obligations</h3>
+<p>The PSB must withhold and remit deductions for any employees of the PSB's corporation (same as regular corporations). They must also report on a slip any payment made to their employees.</p>
+
+<p class="mrgn-tp-lg">Continue to: <a href="#tab1">Employee/Employer</a></p>
+
+<h3>CPP/QPP, EI and QPIP - PSB's contributions obligations</h3>
 <p>Generally, the PSB worker calculates their contributions and reports the following amounts when they fill out their <strong>T2 corporation income tax return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB worker participates in the special EI program</small></li>
@@ -174,7 +177,7 @@
 
  </details></li>	
 
-<li class="cnjnctn-col"><details><summary>Payments made to PSBs <strong>(payer)</strong></summary>
+<li class="cnjnctn-col"><details><summary>Payments made to a PSB <strong>(payer)</strong></summary>
 
 <h3>Withholding and remitting</h3>
 <p>Generally, the payer <strong>does not</strong> withhold and remit the following on the payment made to the worker who is a PSB:</p>
@@ -209,7 +212,7 @@
         <summary>Self-employed/Payer</summary>
 <p>Understand the tax obligations depending on one of the following situation:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary>Self-employed <strong>workers</strong></summary>
+<li class="cnjnctn-col"> <details><summary>Self-employed <strong>worker</strong></summary>
 <h3>Income tax obligations</h3>
 <p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
@@ -244,7 +247,7 @@
  </details></li>	
 
 <li class="cnjnctn-col">
-<details><summary>Payments made to self-employed workers <strong>(payer)</strong></summary>
+<details><summary>Payments made to a self-employed worker <strong>(payer)</strong></summary>
 
 <h3>Withholding and remitting deductions</h3>
 <p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
