--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -78,7 +78,24 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="after.html" class="active" aria-current="page">Understand the income tax, payroll and GST/HST tax obligations</a>	</li>
+<li><a href="after.html" class="active" aria-current="page">Understand the income tax, payroll and GST/HST tax obligations</a>
+
+
+<ul class="noline">
+
+<li><a href="tax-obligations-employee.html" class="hidden-xs hidden-sm">Employee/Employer relationship</a>
+      <a href="tax-obligations-employee.html#gc-document-nav" class="visible-xs visible-sm">Employee/Employer relationship</a></li>
+ 
+
+   <li><a href="tax-obligations-self.html" class="hidden-xs hidden-sm">Self-employed/Payer relationship</a>
+      <a href="tax-obligations-self.html#gc-document-nav" class="visible-xs visible-sm">Self-employed/Payer relationship </a></li>
+  
+  
+<li><a href="tax-obligations-psb.html" class="hidden-xs hidden-sm">Incorporated employee/Payer relationship</a>
+      <a href="tax-obligations-psb.html#gc-document-nav" class="visible-xs visible-sm">Incorporated employee/Payer relationship</a></li>
+                            
+                            </ul>
+	</li>
 
  </ul>
  
