Update and rename tax-obligations.self.html to tax-obligations-self.html

--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -90,7 +90,7 @@
  <li><a href="tax-obligations-employee.html" class="hidden-xs hidden-sm">Employee/Employer relationship</a>
       <a href="tax-obligations-employee.html#gc-document-nav" class="visible-xs visible-sm">Employee/Employer relationship</a></li>
 
-<li><a href="tax-obligations.self.html" class="active" aria-current="page">Self-employed/Payer relationship</a></li>  
+<li><a href="tax-obligations-self.html" class="active" aria-current="page">Self-employed/Payer relationship</a></li>  
    
   
 <li><a href="tax-obligations-psb.html" class="hidden-xs hidden-sm">Incorporated employee/Payer relationship</a>
