--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Understand the income tax, payroll and GST/HST tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
+         <title>Understand your tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -78,7 +78,7 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="after.html" class="active" aria-current="page">Understand the income tax, payroll and GST/HST tax obligations</a>
+<li><a href="after.html" class="active" aria-current="page">Understand your tax obligations</a>
 
 
 <ul class="noline">
@@ -101,7 +101,7 @@
  
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Understand the income tax, payroll and GST/HST tax obligations</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Understand your tax obligations</h1>
  <div id="ajax-classification">
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
