--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -82,7 +82,7 @@
   <dd>Information on the factors to consider to determine if the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation, this may be considered a personal services business (PSB) </dd>
 
 
-<dt>    <a href="after.html">Understand the income tax, payroll and GST/HST tax obligations</a>  </dt>
+<dt>    <a href="after.html">Understand your tax obligations</a>  </dt>
    <dd>Find links to your tax obligations depending on your situation, including how to request penalty or interest relief  </dd>
 
 </dl>            
