--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -89,8 +89,8 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
-      <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
+<li><a href="after.html" class="hidden-xs hidden-sm">Understand your tax obligations</a>
+      <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand your tax obligations </a></li>
 
 
 </ul>
