--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Employee/Employer relationship - Understand the income tax, payroll and GST/HST tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
+         <title>Employee/Employer relationship - Understand your tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -53,7 +53,7 @@
                 href: "../../../index.html"
              
              },{
-                title: "Understand the income tax, payroll and GST/HST tax obligations",
+                title: "Understand your tax obligations",
                 href: "../../index.html"
              },{
                 title: "Determine the employment status: Employee, incorporated employee or self-employed",
@@ -81,8 +81,8 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
-      <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a>
+<li><a href="after.html" class="hidden-xs hidden-sm">Understand your tax obligations</a>
+      <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand your tax obligations</a>
 
 <ul class="noline">
 
