--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -103,7 +103,7 @@
  
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Employee/Employer relationship: Understand the income tax, payroll and GST/HST tax obligations</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Employee/Employer relationship: Understand your tax obligations</h1>
  <div id="ajax-classification">
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
