--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars/western-quebec-tax-services-office-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars/western-quebec-tax-services-office-information-seminars.html
@@ -87,11 +87,11 @@
 <div class="col-md-8">
 
  <p>The Western Quebec Tax Services Office serves businesses that conduct scientific research and experimental development (SR&amp;ED) work in Quebec. </p>
- <p>Free  information webinars provide a general overview of the SR&amp;ED program, and explain the eligibility criteria, what expenditures are eligible, and how to file an SR&amp;ED claim.  </p>
+ <p>Webinars provide a general overview of the SR&amp;ED program, and explain the eligibility criteria, what expenditures are eligible, and how to file an SR&amp;ED claim.  </p>
 <p>The webinar will focus on Quebec, however anyone interested in the SR&amp;ED program may attend.</p>
  <h2>Upcoming webinars</h2>
-  <h3>Public webinar on&nbsp;SR&amp;ED&nbsp;eligibility</h3>
-  <p>This information webinar provides a summary of the  eligibility requirements of the SR&amp;ED program. It is intended for  technical, financial or accounting staff. Attendees will be taken through the  eligibility criteria, qualifying expenditures, and the free services offered.</p>
+  <h3>SR&amp;ED&nbsp;eligibility&nbsp;webinar</h3>
+  <p>This webinar provides a summary of the  eligibility requirements of the SR&amp;ED program. It is intended for  technical, financial or accounting staff. Attendees will be taken through the  eligibility criteria, qualifying expenditures, and the free services offered.</p>
 	  
 <style>
 	.dl-rdcspc dt {
@@ -105,7 +105,7 @@
 <dt>Date:</dt>	
 <dd>February 22, 2023</dd>
 <dt>Time:</dt>	
-<dd>9 am to 11:30 am EST</dd>	
+<dd>9 am to 11:30 am ET</dd>	
 <dt>Language:</dt>	
 <dd>French</dd>
 <dt>Fee:</dt>	
