--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars/greater-toronto-west-tax-services-office-information-seminars.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/person-information-seminars/greater-toronto-west-tax-services-office-information-seminars.html
@@ -86,11 +86,11 @@
             
 <div class="col-md-8">
   <p>The&nbsp;Northern Ontario Tax Services Office  serves businesses that conduct scientific research and experimental development (SR&amp;ED) work in Ontario.  </p>
-  <p>Free information webinars provide a general overview of  the SR&amp;ED program, and explain the eligibility criteria, what expenditures are eligible, and how to file an SR&amp;ED claim.</p>
+  <p>Webinars provide a general overview of  the SR&amp;ED program, and explain the eligibility criteria, what expenditures are eligible, and how to file an SR&amp;ED claim.</p>
 <p>The webinar will focus on Ontario, however anyone interested in the SR&amp;ED program may attend.</p>
   <h2>Upcoming webinars</h2>
-  <h3>Public webinar on&nbsp;SR&amp;ED&nbsp;financial issues</h3>
-  <p>This information webinar provides a summary of the financial  aspects of the&nbsp;SR&amp;ED&nbsp;program. It is intended for financial or  accounting staff already familiar with the basics of  the&nbsp;SR&amp;ED&nbsp;program. Attendees will be taken through the completion  of a T661 Form and the calculation of investment tax credits.</p>
+  <h3>SR&amp;ED&nbsp;financial issues&nbsp;webinar</h3>
+  <p>This webinar provides a summary of the financial  aspects of the&nbsp;SR&amp;ED&nbsp;program. It is intended for financial or  accounting staff already familiar with the basics of  the&nbsp;SR&amp;ED&nbsp;program. Attendees will be taken through the completion  of a T661 Form and the calculation of investment tax credits.</p>
 
   <style>
 	.dl-rdcspc dt {
