--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -51,12 +51,11 @@
               },{
                 title: "Payroll",
                 href: "../../../index.html"
-             
-             },{
-                title: "Understand your tax obligations",
+            },{
+                title: "Determine the employment status: Employee, incorporated employee or self-employed",
                 href: "../../index.html"
              },{
-                title: "Determine the employment status: Employee, incorporated employee or self-employed",
+                title: "Understand your tax obligations",
                 href: "index.html"
               }
               ],
@@ -111,200 +110,45 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-<p>Understanding the tax obligations based on the type of relationship:</p>
+<p>Understanding the tax obligations based the individual:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Employee/Employer</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Incorporated employee/Payer</a> (personal services business)</li>
-<li><a href="#tab3" class="wb-tabs-ext">Self-employed/Payer</a></li>
+<li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
+<li><a href="#tab2" class="wb-tabs-ext">Employer</li>
 </ul>   
 
  <div class="wb-tabs">
                <div class="tabpanels">
-    <details id="tab1">
-        <summary><br class="visible-lg">Employee/Employer</summary>
-
-<p>Understand the tax obligations depending on one of the following situation:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary><strong>Employee</strong></summary>
-<h3>Income tax obligations</h3>
-</details></li>	
-
-<li class="cnjnctn-col"><details><summary><strong>Employer</strong></summary>
-
-<h5>Remitting deductions on the payment</h5>
-<p>Generally, you must remit the following deductions on the self-employment income paid to a self-employed fisher, a barber, a hairdresser or a driver :</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> EI <small>- Remit on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
-</ul>
-</details></li>	
-</ul>	
-
-</details>
-
- <details id="tab2">
-        <summary>Incorporated employee/Payer</summary>
-
-<p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. Incorporated employees in this situation is considered a personal services business (PSB).</p>
-
-<p>Understand the tax obligations depending on one of the following situation:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary>PSB <strong>worker</strong></summary>
-<h3>Income tax obligations</h3>
-
-<p>Generally, the PSB must:</p>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">File T2  returns</a> <small>- <strong>Not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a></small></li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> <small> - Same as regular corporations</small> </li>
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations.html">Corporations</a></p>
-
-<h3>Payroll obligations</h3>
-<p>The PSB must withhold and remit deductions for any employees of the PSB's corporation (same as regular corporations). They must also report on a slip any payment made to their employees.</p>
-
-<p class="mrgn-tp-lg">Continue to: <a href="#tab1">Employee/Employer</a></p>
-
-<h3>CPP/QPP, EI and QPIP - PSB's contributions obligations</h3>
-<p>Generally, the PSB worker calculates their contributions and reports the following amounts when they fill out their <strong>T2 corporation income tax return</strong>:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB worker participates in the special EI program</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the PSB worker works in the  <strong>Province of Quebec</strong></small></li>
-</ul>
-
-<p class="mrgn-tp-lg">Learn more: </p>
+    <details id="tab1"><summary>Employee</summary>
+<p>On this page:</p>
 <ul>
-<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
-<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
-<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
-</ul>
+<li><a href="#1a">Income tax obligations</a> </li>
+<li><a href="#2b">Canada Pension Plan contributions</li>
+<li><a href="#3c">Quebec Pension Plan contributions</li>
+<li><a href="#4d">Employment Insurance contributions</li>
+<li><a href="#5e">GST/HST obligations</li>
+</ul> 
 
-<h3>GST/HST obligations</h3>
-<p>For the PSB, the GST/HST obligations are the same as other corporations. </p>
+<h3 id="1a">Income tax obligations</h3>
 
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
-<h3>Example of non-compliance</h3>
-
-<p>Examples of <strong>non-compliance</strong> situation for PSB corporations: </p>
-<ul>
-<li>Not reporting non-active business income on line 207 of the T2 returns and did not complete Schedule 7 </li>
-<li>Claiming the small business deduction on line 430 of the T2  return </li>
-<li>Claiming other deductions that was not allowed on the T2 return </li>
-<li>Claiming salary expense on the T2 return </li>
-<li>Not filing T2 returns </li>
-<li>Not registering for the GST/HST or filed the required returns </li>
-</ul>
-
- </details></li>	
-
-<li class="cnjnctn-col"><details><summary>Payments made to a PSB <strong>(payer)</strong></summary>
-
-<h3>Withholding and remitting</h3>
-<p>Generally, the payer <strong>does not</strong> withhold and remit the following on the payment made to the worker who is a PSB:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Income tax <small>- <strong>Only</strong> withhold and remit on the payment for services at the rate of 15% if the PSB is a non-resident recipient</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong>withhold or remit</small></li> 
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> GST/HST <small>- <strong>Only</strong> withhold and remit on the payment for services where applicable if the PSB is for a construction subcontractor payment </small></li>
-</ul>
-
-<h3>Reporting the payment on the PSB's slip</h3>
-<p>Generally, the payer must report the payment made to the worker who is a PSB on the following slip:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T4A, T4A-NR, T5018 or T1204 slip <small>- Depending on who the payment is made to</small></li>	
-</ul>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
-
-<h3>Reporting the payment on the payer's income tax return</h3>
-<p>Generally, the payer must report the payment made to the worker who is a PSB on one of their following income tax return as a business expense:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
-<li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
-</ul>
  </details>
-</li>	
-</ul>
-
-
-
-</details>
- <details id="tab3">
-        <summary>Self-employed/Payer</summary>
-<p>Understand the tax obligations depending on one of the following situation:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary>Self-employed <strong>worker</strong></summary>
-<h3>Income tax obligations</h3>
-<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>	
-</ul>
-
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
-
-
-<h3>CPP/QPP, EI and QPP obligations</h3>
-<p>Generally, the self-employed worker calculates their contributions and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker  participates in the special EI program</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the self-employed worker works in the  <strong>Province of Quebec</strong></small></li>
-</ul>
-
-<p class="mrgn-tp-lg">Learn more: </p>
+ <details id="tab2"><summary>Employer</summary>
+<p>On this page:</p>
 <ul>
-<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
-<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
-<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
-</ul>
+<li><a href="#1A">Income tax obligations</a> </li>
+<li><a href="#2B">Canada Pension Plan contributions</li>
+<li><a href="#3C">Quebec Pension Plan contributions</li>
+<li><a href="#4D">Employment Insurance contributions</li>
+<li><a href="#5E">GST/HST obligations</li>
+</ul> 
 
-<h3>GST/HST obligations</h3>
-<p>Generally, the self-employed worker remits the following on the payment made by them:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+<h5>Withholding and remitting deductions</h5>
+<p>Generally, you must remit the following deductions on the employment income paid to an employer:</p>
 
- </details></li>	
-
-<li class="cnjnctn-col">
-<details><summary>Payments made to a self-employed worker <strong>(payer)</strong></summary>
-
-<h3>Withholding and remitting deductions</h3>
-<p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold or remit</small></li> 
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
-
-<h3>Remitting GST/HST </h3>
-<p>Generally, the payer <strong>does not</strong> remit the following on the payment made to the self-employed worker:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
- 
-<h3>Reporting the payment on the self-employed worker's slip</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on the following slip:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T4A slip <small> </small></li>	
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
-
-<h3>Reporting the payment on the payer's income tax return</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on one of their following income tax return as a business expense:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
-<li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
-</ul>
- </details>
-</li>	
-</ul>
 </details>
 </div></div>
   
 
-
+<h2 id="h_records">Keeping your records</h2>
 
 
 <h2 id="h_2">Help for small businesses</h2>
