--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -53,10 +53,10 @@
                 href: "../../../index.html"
              
              },{
-                title: "Understand your tax obligations",
+                title: "Determine the employment status: Employee, incorporated employee or self-employed",
                 href: "../../index.html"
              },{
-                title: "Determine the employment status: Employee, incorporated employee or self-employed",
+                title: "Understand your tax obligations",
                 href: "index.html"
               }
               ],
@@ -111,44 +111,28 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-<p>Understanding the tax obligations based on the type of relationship:</p>
+<p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. Incorporated employees in this situation is considered a personal services business (PSB).</p>
+
+<p>Understanding the tax obligations based on the individual:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Employee/Employer</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Incorporated employee/Payer</a> (personal services business)</li>
-<li><a href="#tab3" class="wb-tabs-ext">Self-employed/Payer</a></li>
+<li><a href="#tab1" class="wb-tabs-ext">PSB worker</a> </li>
+<li><a href="#tab2" class="wb-tabs-ext">Payer - Payments made to a PSB</li>
 </ul>   
 
  <div class="wb-tabs">
                <div class="tabpanels">
-    <details id="tab1">
-        <summary><br class="visible-lg">Employee/Employer</summary>
+   
+ <details id="tab1"><summary>PSB worker</summary>
 
-<p>Understand the tax obligations depending on one of the following situation:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary><strong>Employee</strong></summary>
-<h3>Income tax obligations</h3>
-</details></li>	
+<p>On this page:</p>
+<ul>
+<li><a href="#1a">Income tax obligations</a> </li>
+<li><a href="#2b">Canada Pension Plan contributions</li>
+<li><a href="#3c">Quebec Pension Plan contributions</li>
+<li><a href="#4d">Employment Insurance contributions</li>
+<li><a href="#5e">GST/HST obligations</li>
+</ul> 
 
-<li class="cnjnctn-col"><details><summary><strong>Employer</strong></summary>
-
-<h5>Remitting deductions on the payment</h5>
-<p>Generally, you must remit the following deductions on the self-employment income paid to a self-employed fisher, a barber, a hairdresser or a driver :</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> EI <small>- Remit on <strong>all</strong> income (under special EI regulations, EI is remitted on behalf of the worker on all of their insurable earnings)</small></li>
-</ul>
-</details></li>	
-</ul>	
-
-</details>
-
- <details id="tab2">
-        <summary>Incorporated employee/Payer</summary>
-
-<p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. Incorporated employees in this situation is considered a personal services business (PSB).</p>
-
-<p>Understand the tax obligations depending on one of the following situation:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary>PSB <strong>worker</strong></summary>
 <h3>Income tax obligations</h3>
 
 <p>Generally, the PSB must:</p>
@@ -194,9 +178,18 @@
 <li>Not registering for the GST/HST or filed the required returns </li>
 </ul>
 
- </details></li>	
+ </details>
 
-<li class="cnjnctn-col"><details><summary>Payments made to a PSB <strong>(payer)</strong></summary>
+ <details id="tab2"> <summary>Payer - Payments made to a PSB</summary>
+
+<p>On this page:</p>
+<ul>
+<li><a href="#1A">Income tax obligations</a> </li>
+<li><a href="#2B">Canada Pension Plan contributions</li>
+<li><a href="#3C">Quebec Pension Plan contributions</li>
+<li><a href="#4D">Employment Insurance contributions</li>
+<li><a href="#5E">GST/HST obligations</li>
+</ul> 
 
 <h3>Withholding and remitting</h3>
 <p>Generally, the payer <strong>does not</strong> withhold and remit the following on the payment made to the worker who is a PSB:</p>
@@ -224,86 +217,12 @@
 </li>	
 </ul>
 
-
-
-</details>
- <details id="tab3">
-        <summary>Self-employed/Payer</summary>
-<p>Understand the tax obligations depending on one of the following situation:</p>
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <details><summary>Self-employed <strong>worker</strong></summary>
-<h3>Income tax obligations</h3>
-<p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small> </small> </li>	
-</ul>
-
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></p>
-
-
-<h3>CPP/QPP, EI and QPP obligations</h3>
-<p>Generally, the self-employed worker calculates their contributions and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the self-employed worker  participates in the special EI program</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- <strong>Both</strong> employer and employee portion</small></li> 
-<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the self-employed worker works in the  <strong>Province of Quebec</strong></small></li>
-</ul>
-
-<p class="mrgn-tp-lg">Learn more: </p>
-<ul>
-<li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
-<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
-<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
-</ul>
-
-<h3>GST/HST obligations</h3>
-<p>Generally, the self-employed worker remits the following on the payment made by them:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
-
- </details></li>	
-
-<li class="cnjnctn-col">
-<details><summary>Payments made to a self-employed worker <strong>(payer)</strong></summary>
-
-<h3>Withholding and remitting deductions</h3>
-<p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold or remit</small></li> 
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
-
-<h3>Remitting GST/HST </h3>
-<p>Generally, the payer <strong>does not</strong> remit the following on the payment made to the self-employed worker:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
- 
-<h3>Reporting the payment on the self-employed worker's slip</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on the following slip:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T4A slip <small> </small></li>	
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
-
-<h3>Reporting the payment on the payer's income tax return</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on one of their following income tax return as a business expense:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
-<li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
-</ul>
  </details>
-</li>	
-</ul>
-</details>
+
 </div></div>
   
 
+<h2 id="h_records">Keeping your records</h2>
 
 
 
