--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -113,7 +113,7 @@
 <p>Understanding the tax obligations based the individual:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Employer</li>
+<li><a href="#tab2" class="wb-tabs-ext">Employer</a> </li>
 </ul>   
 
  <div class="wb-tabs">
@@ -122,10 +122,10 @@
 <p>On this page:</p>
 <ul>
 <li><a href="#1a">Income tax obligations</a> </li>
-<li><a href="#2b">Canada Pension Plan contributions</li>
-<li><a href="#3c">Quebec Pension Plan contributions</li>
-<li><a href="#4d">Employment Insurance contributions</li>
-<li><a href="#5e">GST/HST obligations</li>
+<li><a href="#2b">Canada Pension Plan contributions</a> </li>
+<li><a href="#3c">Quebec Pension Plan contributions</a> </li>
+<li><a href="#4d">Employment Insurance contributions</a> </li>
+<li><a href="#5e">GST/HST obligations</a> </li>
 </ul> 
 
 <h3 id="1a">Income tax obligations</h3>
@@ -135,10 +135,10 @@
 <p>On this page:</p>
 <ul>
 <li><a href="#1A">Income tax obligations</a> </li>
-<li><a href="#2B">Canada Pension Plan contributions</li>
-<li><a href="#3C">Quebec Pension Plan contributions</li>
-<li><a href="#4D">Employment Insurance contributions</li>
-<li><a href="#5E">GST/HST obligations</li>
+<li><a href="#2B">Canada Pension Plan contributions</a> </li>
+<li><a href="#3C">Quebec Pension Plan contributions</a> </li>
+<li><a href="#4D">Employment Insurance contributions</a> </li>
+<li><a href="#5E">GST/HST obligations</a> </li>
 </ul> 
 
 <h5>Withholding and remitting deductions</h5>
