--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -116,7 +116,7 @@
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">PSB worker</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Payer - Payments made to a PSB</li>
+<li><a href="#tab2" class="wb-tabs-ext">Payer - Payments made to a PSB</a></li>
 </ul>   
 
  <div class="wb-tabs">
@@ -126,11 +126,11 @@
 
 <p>On this page:</p>
 <ul>
-<li><a href="#1a">Income tax obligations</a> </li>
-<li><a href="#2b">Canada Pension Plan contributions</li>
-<li><a href="#3c">Quebec Pension Plan contributions</li>
-<li><a href="#4d">Employment Insurance contributions</li>
-<li><a href="#5e">GST/HST obligations</li>
+<li><a href="#1a">Income tax obligations</a></li>
+<li><a href="#2b">Canada Pension Plan contributions</a></li>
+<li><a href="#3c">Quebec Pension Plan contributions</a></li>
+<li><a href="#4d">Employment Insurance contributions</a></li>
+<li><a href="#5e">GST/HST obligations</a></li>
 </ul> 
 
 <h3>Income tax obligations</h3>
@@ -184,11 +184,11 @@
 
 <p>On this page:</p>
 <ul>
-<li><a href="#1A">Income tax obligations</a> </li>
-<li><a href="#2B">Canada Pension Plan contributions</li>
-<li><a href="#3C">Quebec Pension Plan contributions</li>
-<li><a href="#4D">Employment Insurance contributions</li>
-<li><a href="#5E">GST/HST obligations</li>
+<li><a href="#1A">Income tax obligations</a></li>
+<li><a href="#2B">Canada Pension Plan contributions</a></li>
+<li><a href="#3C">Quebec Pension Plan contributions</a></li>
+<li><a href="#4D">Employment Insurance contributions</a></li>
+<li><a href="#5E">GST/HST obligations</a></li>
 </ul> 
 
 <h3>Withholding and remitting</h3>
