--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Incorporated employee/Payer relationship - Understand your tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
+         <title>Incorporated employee and payer relationship - Understand your tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -87,14 +87,14 @@
 <ul class="noline">
 
 
-<li><a href="tax-obligations-employee.html" class="hidden-xs hidden-sm">Employee/Employer relationship</a>
-      <a href="tax-obligations-employee.html#gc-document-nav" class="visible-xs visible-sm">Employee/Employer relationship</a></li>
+<li><a href="tax-obligations-employee.html" class="hidden-xs hidden-sm">Employee and employer relationship</a>
+      <a href="tax-obligations-employee.html#gc-document-nav" class="visible-xs visible-sm">Employee and employer relationship</a></li>
 
-   <li><a href="tax-obligations-self.html" class="hidden-xs hidden-sm">Self-employed/Payer relationship</a>
-      <a href="tax-obligations-self.html#gc-document-nav" class="visible-xs visible-sm">Self-employed/Payer relationship </a></li>
+   <li><a href="tax-obligations-self.html" class="hidden-xs hidden-sm">Self-employed and payer relationship</a>
+      <a href="tax-obligations-self.html#gc-document-nav" class="visible-xs visible-sm">Self-employed and payer relationship </a></li>
   
        
-<li><a href="tax-obligations.psb.html" class="active" aria-current="page">Incorporated employee/Payer relationship</a></li>
+<li><a href="tax-obligations.psb.html" class="active" aria-current="page">Incorporated employee and payer relationship</a></li>
                        
                             </ul>
 	</li>
@@ -103,7 +103,7 @@
  
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Incorporated employee/Payer relationship: Understand your tax obligations</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Incorporated employee and payer relationship: Understand your tax obligations</h1>
  <div id="ajax-classification">
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
