--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -164,7 +164,7 @@
 
 </details>
 
- <details id="tab2"><summary>Payer</summary>
+ <details id="tab2"><summary>Payer - Payments made to a self-employed worker</summary>
 
 <p>On this page:</p>
 <ul>
