--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -107,6 +107,10 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
+<p>Depending if the worker is an <strong>employee</strong>, <strong>self-employed</strong> or an <strong>incorporated employee</strong> the tax obligations may be different.</p>
+
+<p>An incorporated employee and a payer have different tax obligations if the incorporated employee <strong>perform the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
+
 <p>To understand your tax obligations, continue to one of the following depending on the type of relationship:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
