--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -116,7 +116,7 @@
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">PSB worker</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Payer - Payments made to a PSB</a></li>
+<li><a href="#tab2" class="wb-tabs-ext">Payer</a> - Payments made to a PSB</li>
 </ul>   
 
  <div class="wb-tabs">
@@ -180,7 +180,7 @@
 
  </details>
 
- <details id="tab2"> <summary>Payer - Payments made to a PSB</summary>
+ <details id="tab2"> <summary>Payer</summary>
 
 <p>On this page:</p>
 <ul>
