--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -114,7 +114,7 @@
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">Self-employed worker</a> </li>
-<li><a href="#tab2" class="wb-tabs-ext">Payer - Payments made to a self-employed worker</a></li>
+<li><a href="#tab2" class="wb-tabs-ext">Payer</a> - Payments made to a self-employed worker</li>
 </ul>   
 
  <div class="wb-tabs">
@@ -164,7 +164,7 @@
 
 </details>
 
- <details id="tab2"><summary>Payer - Payments made to a self-employed worker</summary>
+ <details id="tab2"><summary>Payer</summary>
 
 <p>On this page:</p>
 <ul>
